# sayari-python

./: .fernignore  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  reference.md  requirements.txt
.github/workflows/: ci.yaml  ci.yml
docs/: python_sdk.md
example/: example.py  pagination.py  rate_limit.py
examples/: ReadMe.md  csv-resolve.py  entities_to_screen.csv  env_loader.py  hello-world.py  pagination.py  screening.py  smoke-test.py  trade-search.py
sayari/: requirements.txt
sdk/: main.py
src/sayari/: __init__.py  base_client.py  client.py  environment.py  main.py  requirements.txt  test_sayari.py  version.py
src/sayari/attributes/: client.py
src/sayari/auth/: __init__.py  client.py
src/sayari/base_types/: __init__.py
src/sayari/core/: client_wrapper.py  oauth_token_provider.py
src/sayari/entity/: client.py
src/sayari/generated_types/: __init__.py
src/sayari/info/: __init__.py  client.py
src/sayari/metadata/: __init__.py  client.py
src/sayari/negative_news/: __init__.py  client.py
src/sayari/notifications/: __init__.py  client.py
src/sayari/ontology/: __init__.py  client.py
src/sayari/project/: __init__.py  client.py
src/sayari/project_entity/: __init__.py  client.py
src/sayari/project_entity_attributes/: __init__.py  client.py
src/sayari/project_entity_supply_chain_snapshots/: __init__.py  client.py
src/sayari/python/: __init__.py  client.py  (+1 more)
tests/: test_sayari.py  test_sdk.py
tests/custom/: prod_test.py  test_sdk.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+1060 files in other folders)
