[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sayari-python"
version = "0.0.1"
authors = [
  { name="David Konigsberg", email="dkonigsberg@sayarianalytics.com" },
]
description = "A Python SDK for interacting with the Sayari graph API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sayari-analytics/sayari-python"
